--- a/css/style.css
+++ b/css/style.css
@@ -131,8 +131,11 @@ nav a{
 }
 
 #skills{
+    display: flex;
+    flex-direction: column;
     background-color: whitesmoke;
     padding-top: 1px;
+    height: 70vh;
 }
 
 #skills header{
@@ -155,10 +158,38 @@ nav a{
 .skillcards{
     display: flex;
     justify-content: space-around;
+    width: 80%;
+    align-self: center;
 }
 
-.skillcards div{
+.skillcards article{
     background-color: white;
-    width: 20vh;
-    height: 20vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    width: 15%;
+    border: 2px dashed gray;
+}
+
+.skillcards article i{
+    color: darkgoldenrod;
+    font-size: 70px;
+    padding: 0;
+    margin: 0;
+}
+
+.skillcards article h4{
+    font-family: 'Lucida Sans', sans-serif;
+    padding: 0;
+    margin: 0;
+    padding-top: 20px;
+}
+
+.skillcards article p{
+    font-family: 'Lucida Sans', sans-serif;
+    text-align: center;
+    font-size: 15px;
+    padding: 0;
+    margin: 0;
 }
